tests/interp/bad/exists-3.ngc
(Parameter number out of range)
#2=99999
G0 X EXISTS[###2]
M2
